--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ footer {
     background-color: #000F08;
     color: white;
     padding: 30px;
-    height: 2000px;
+    /* height: 2000px; */
 }
 
 footer i {
